# PDF_converter

./: .env.example  .gitignore  AGENTS.md  README.md  agent.md  alembic.ini  architecture.md  docker-compose.yml  implementation_plan.md  llm_config.yml  mapping_report_20260121_2320.md  mapping_report_20260123_0045.md  migrate.py  pipeline_report_ccc_leipzig_20260120.md  pyproject.toml  requirements.txt  rework.md  run_pipeline.py
.github/workflows/: deploy-migrations.yml
app/database/: __init__.py  models.py
app/extraction/: config.yaml  extract.py
app/mapping/: apply_city_mapping.py  apply_llm_mapping.py  clear_foreign_keys.py  mapping.py  mapping_plan.md  validate_foreign_keys.py
app/modules/: __init__.py
app/scripts/: __init__.py  _shared.py  analyze_mapping_output.py  granite_conversion.py  (+9 more)
database/: README.md  __init__.py  base.py  config.py  migrate.py  schemas.py  session.py
extraction/: README.md  __init__.py  config.yaml  extract.py  schemas_llm.py  schemas_verified.py
k8s/: pdf-converter-db-configmap.yml  pdf-converter-migrate.yml
mapping/: __init__.py  mapping.py
pdf2markdown/: README.md  __init__.py  pdf_to_markdown.py
scripts/: _shared.py  granite_conversion.py  library_conversion.py  pdf_to_markdown_mistral.py
tests/: test_chunking.py  test_extraction_integration_live.py  test_extraction_missing_tables.py  test_extraction_verified.py  test_pipeline_integration.py  test_problematic_tables_extraction.py  test_quote_validation.py  test_verified_field.py  test_verified_mapping.py
utils/: __init__.py  config.py  logging_config.py
(+138 files in other folders)
