[project]
name = "pdf-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling[vlm]==2.55.1",
    "mistralai>=0.4.0",
    "openai>=1.0.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
]
